      a wallpaper as it matches the boot sequence, and can't be easily changed
      by the user.
    - ensure lock screen matches gdm and shell theming.
  * Theme new assets on build (close and toggle buttons)
  * Add upstream high contrast theme to ubuntu mode. This will default to
    adwaita with upstream colors for accessibility.

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 31 Aug 2017 13:26:28 +0200

gnome-shell (3.25.91-0ubuntu2) artful; urgency=medium

  * debian/rules:
    - Don't use variable when passing libexecdir for meson build
    - Change --list-missing to --fail-missing to catch this kind of problem

 -- Jeremy Bicha <jbicha@ubuntu.com>  Fri, 01 Sep 2017 10:38:12 -0400

gnome-shell (3.25.91-0ubuntu1) artful; urgency=medium

  [ Jeremy Bicha ]
  * New upstream release (LP: #1712800)
  * Build with meson
  * debian/control.in:
    - Build-depend on libasound2-dev
    - Bump minimum libglib2.0-dev to 2.53.0
    - Update dependencies for mutter 3.25.90
  * debian/rules:
    - Drop disable-new-dtags flag, no longer needed
    - Drop dh_girepository override, doesn't work with meson
      and apparently not needed
  * Refresh patches
  * Drop git patches applied in new release
  * Add run-unit-tests.patch: Run unit tests with meson

  [ Tim Lunn ]
  * New upstream release
  * debian/control.in
    - Update dependencies for mutter 3.25.91
  * debian/patches:
    - ubuntu_lock_on_suspend.patch: Rebased on changes introduced
      in commit 9c3b3320f
    - optional-libgdm.patch: disabled, this should not be required
      since Ubuntu is using gdm

 -- Jeremy Bicha <jbicha@ubuntu.com>  Wed, 30 Aug 2017 14:46:42 -0400

gnome-shell (3.24.3-0ubuntu7) artful; urgency=medium

  * Add appindicator extension enabled by default in the ubuntu session

 -- Didier Roche <didrocks@ubuntu.com>  Wed, 23 Aug 2017 08:13:25 +0200

gnome-shell (3.24.3-0ubuntu6) artful; urgency=medium

  * debian/rules: Ignore unit test failures on armhf
