@@ -8,10 +8,14 @@ Index: gnome-shell-3.24.3/js/misc/desktop.js
 ===================================================================
 --- /dev/null
 +++ gnome-shell-3.24.3/js/misc/desktop.js
-@@ -0,0 +1,27 @@
+@@ -0,0 +1,39 @@
 +// -*- mode: js; js-indent-level: 4; indent-tabs-mode: nil -*-
 +
 +const GLib = imports.gi.GLib;
++
++// current desktop doesn't change unless we restart the shell or control
++// the env variable. It's safe to cache matching result
++let _currentDesktopsMatches = {};
 +
 +// is:
 +// @name: desktop string you want to assert if it matches the current desktop env
@@ -22,18 +26,26 @@ Index: gnome-shell-3.24.3/js/misc/desktop.js
 +// Return value: if the environment isn't set or doesn't match, return False
 +// otherwise, return True.
 +function is(name) {
++
++    if (_currentDesktopsMatches[name] !== undefined) {
++        return _currentDesktopsMatches[name];
++    }
++
 +    let desktopsEnv = GLib.getenv('XDG_CURRENT_DESKTOP');
 +    if (!desktopsEnv) {
++        _currentDesktopsMatches[name] = false;
 +        return false;
 +    }
 +
 +    let desktops = desktopsEnv.split(":");
 +    for (let i = 0; i < desktops.length; i++) {
 +        if (desktops[i] === name) {
++            _currentDesktopsMatches[name] = true;
 +            return true;
 +        }
 +    }
 +
++    _currentDesktopsMatches[name] = false;
 +    return false;
 +}
 Index: gnome-shell-3.24.3/js/js-resources.gresource.xml
